--- a/index.html
+++ b/index.html
@@ -74,6 +74,13 @@
 			overflow-x: hidden;
 		}
 		}
+		@media(max-width: 330px)
+		{
+			.news_heading h1{
+			color: white;
+			padding: 20px 20px;
+		}
+		}
 	</style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
