--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 			margin: 0; padding: 0; box-sizing: border-box;
 		}
 		body{
-			/* overflow-y: hidden; */
-			height: 100vh;
+			 overflow-y: hidden; 
+			
 		}
 		/* .header{
 			background-color: transparent;
@@ -54,12 +54,7 @@
 			font-size: 15px;
 		}
 
-		.carousel-indicators{
-			background-color: blue;
-			margin: 30px 0 0 0;
-			
-
-		}
+		
 		@media(max-width: 992px)
 		{
 			.news_heading{
@@ -81,9 +76,7 @@
 			padding: 30px;
 			margin: 0;
 		}
-		.carousel-indicators{
-			margin-top:
-		}
+		
 		}
 	</style>
     <meta charset="UTF-8">
